# isailing

./: .gitignore  CHANGELOG.md  README.md  deploy.sh  env.d.ts  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  uno.config.ts  vite.config.ts
.github/workflows/: tauri-build.yml
dev-dist/: sw.js
public/: icon-generator.html  manifest.json
scripts/: generate-icons.js
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: OfflineIndicator.vue  PWAInstallPrompt.vue  PWAUpdatePrompt.vue
src/components/game/: ChatMessage.vue  EventDisplay.vue  GameChat.vue  GameDialogs.vue  GameFooter.vue  GameHeader.vue  InventoryDrawer.vue  LoadingIndicator.vue  MarketDrawer.vue  StatCardDesktop.vue  (+1 more)
src/composables/: useGameActions.ts  useGameChat.ts  useGameDialogs.ts  useGameEvents.ts  useGameKeyboard.ts  useGameLogic.ts  useGameMenus.ts  useGameOperations.ts  useGameTime.ts  useMobile.ts  usePWA.ts  usePredictionMarket.ts
src/config/: ConfigExample.ts  ConfigManager.ts  city-id.ts  constants.ts  game.config.ts  goodsIcons.config.ts  predictionMarket.config.ts  theme.config.ts
src/core/: GameEngine.ts
src/plugins/: element-plus-x-resolver.ts  element-plus-x.ts  element-plus.ts
src/router/: index.ts
src/stores/: game.ts
src/styles/: dialog-compact.css  element-plus-x.css  element-plus.css
src/types/: game.ts  pwa.d.ts
src/utils/: debug.ts  fame.ts  gameData.ts  offline.ts  season.ts
src/views/: About.vue  Game.vue  Home.vue
(+65 files in other folders)
