[package]
name = "isailing"
version = "0.1.0"
description = "iSailing Desktop"
authors = ["isailing team"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

